[package]
name = "tokimo-mail"
version = "0.1.0"
edition = "2024"
description = "Email client library — IMAP/SMTP with full provider support"

[lib]
name = "tokimo_mail"
path = "src/lib.rs"

[dependencies]
# IMAP
async-imap = "0.11.2"
# SMTP (sending)
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls",
    "webpki-roots",
    "aws-lc-rs",
    "smtp-transport",
    "builder",
] }
# Email parsing
mailparse = "0.16"
# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "std", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "1"
# Async runtime
tokio = { workspace = true, features = ["sync", "time", "macros", "rt", "net"] }
tokio-util = { workspace = true, features = ["compat"] }
futures = { workspace = true }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
# Error handling
thiserror = { workspace = true }
# Logging
tracing = { workspace = true }
# Utils
utf7-imap = "0.3"
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
html2text = "0.16.7"

[lints]
workspace = true
